log/build_2022-09-27_03-02-38/state_reader/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/workspace/BMI/install/state_reader/lib/python3.10/site-packages/state_reader/psychopy_presenter_1D_center_out.py", line 217
    psychopy_presenter.get_logger().info('Publishing: Xpos: {}'.format(str(Xpos))
                                        ^
SyntaxError: '(' was never closed

